fix fonts. fix block alignment

--- a/src/pages/home/HomeCases/CasesSection.scss
+++ b/src/pages/home/HomeCases/CasesSection.scss
@@ -19,6 +19,9 @@
         padding-top: 25px;
         background-color: transparent;
         position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
 
     .cases-header {
