--- a/src/pages/home/HomeNeurons/NeuronsSection.scss
+++ b/src/pages/home/HomeNeurons/NeuronsSection.scss
@@ -17,6 +17,9 @@
     padding-top: 25px;
     background-color: transparent;
     position: relative;
+    display: flex;
+    align-items: center;
+    height: calc(100vh - 76px);
 }
 
 .neurons-overlay {
@@ -51,8 +54,20 @@
     display: none;
 }
 
+.button-text:focus,
+.button-text:active {
+    border: none;
+    border-width: 0;
+    outline: 0;
+    box-shadow: none !important;
+}
+
 
 @media (min-width: 768px) {
+
+    .neurons-section-inside {
+        height: calc(100vh - 62px);
+    }
 
     .header-text-neurons{
         margin-top: 0;
