--- a/src/pages/home/HomeQuestions/QuestionSection.scss
+++ b/src/pages/home/HomeQuestions/QuestionSection.scss
@@ -40,6 +40,9 @@
         padding-top: 25px;
         background-color: transparent;
         position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
 
     .MuiFilledInput-root {
