--- a/src/pages/home/HomeServicesWeProvide/ServicesWeProvideSection.scss
+++ b/src/pages/home/HomeServicesWeProvide/ServicesWeProvideSection.scss
@@ -39,9 +39,9 @@
 
 .service-title {
     font-family: Montserrat, serif;
-    height: 20px;
     font-weight: bold;
     font-size: 19px;
+    margin: 0;
 }
 
 .services-description {
@@ -54,13 +54,13 @@
 }
 
 .swp-row {
+    display: flex;
+    align-items: center;
 }
 
 .swp-shadow-span {
-
     top: 112px;
     left: 5%;
-
 }
 
 @media (min-width: 720px) {
@@ -94,6 +94,7 @@
 
     .swp-item {
         flex-direction: column;
+        align-items: flex-start;
     }
 
     .services-first-row {
